@@ -103,7 +103,8 @@ extern struct Battle_Config {
 	unsigned short pc_damage_delay_rate;
 	unsigned short defnotenemy;
 	unsigned short vs_traps_bctall;	
-	unsigned short traps_setting;	
+	unsigned short traps_setting;
+	unsigned short summon_flora; //[Skotlex]	
 	unsigned short clear_unit_ondeath; //[Skotlex]
 	unsigned short clear_unit_onwarp; //[Skotlex]
 	unsigned short random_monster_checklv;
